--- a/env.example
+++ b/env.example
@@ -9,5 +9,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # External Auth App URL (ALIC-Calendar)
-NEXT_PUBLIC_AUTH_URL=http://localhost:3001/auth
+# Used in production - leave empty for development to use local Supabase Auth
+# NEXT_PUBLIC_AUTH_URL=http://localhost:3001/auth
 
