consolidated admin page

--- a/env.example
+++ b/env.example
@@ -9,6 +9,10 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # External Auth App URL (ALIC-Calendar)
-# Used in production - leave empty for development to use local Supabase Auth
-# NEXT_PUBLIC_AUTH_URL=http://localhost:3001/auth
+# In production, point this to the shared domain auth route, e.g.:
+# NEXT_PUBLIC_AUTH_URL=https://yourdomain.com/auth
+
+# Calendar app base URL used by Next.js rewrites to proxy calendar routes
+# In production, this should be the Vercel URL of the calendar app, e.g.:
+# CALENDAR_APP_URL=https://alic-calendar.vercel.app
 
