--- a/env.example
+++ b/env.example
@@ -2,8 +2,9 @@
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
-# Optional: Service Role Key (for server-side operations that bypass RLS)
-# SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+# Service Role Key (Required for admin operations like inviting users)
+# ⚠️ NEVER expose this key to the client/browser - only use in server-side code
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
